[tool.poetry]
name = "developer"
version = "0.1.0"
description = ""
authors = ["Yamato <katsuya.yamato@toyota.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = 'developer.hello:say_hello'
time = 'developer.time:get_current_time'